[gd_scene load_steps=19 format=2]

[ext_resource path="res://Levels/Backgrounds/CityLayer2.png" type="Texture" id=1]
[ext_resource path="res://Levels/Tiles/CityTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Levels/Backgrounds/CityBackground.png" type="Texture" id=3]
[ext_resource path="res://Levels/Objects/VineYolo.png" type="Texture" id=4]
[ext_resource path="res://Levels/Backgrounds/CityLayer 1.png" type="Texture" id=5]
[ext_resource path="res://Levels/Backgrounds/CityForeground.png" type="Texture" id=6]
[ext_resource path="res://UI/HUD.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/WinScreen.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/GameOverScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Powerups/Puddle.tscn" type="PackedScene" id=14]
[ext_resource path="res://UI/EndScreen.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/StoryScreen.tscn" type="PackedScene" id=16]
[ext_resource path="res://Characters/Player/TeleportChecker.tscn" type="PackedScene" id=17]
[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=18]
[ext_resource path="res://Characters/Crystal/Crystal.tscn" type="PackedScene" id=19]
[ext_resource path="res://Levels/World.gd" type="Script" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 192 )

[node name="Level2" type="Node2D"]
pause_mode = 1
script = ExtResource( 20 )
first_level = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
offset = Vector2( 50, 40 )
transform = Transform2D( 1, 0, 0, 1, 50, 40 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, -75 )
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( 1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="CityBgLayer2" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2( 0, 40 )
motion_offset = Vector2( 1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="CityBgLayer1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 5 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = -2
offset = Vector2( 50, 80 )
transform = Transform2D( 1, 0, 0, 1, 50, 80 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2( 0, 10 )
motion_offset = Vector2( 1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="Background" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource( 3 )

[node name="ParallaxForeground" type="ParallaxBackground" parent="."]
layer = 0
offset = Vector2( 50, 123 )
transform = Transform2D( 1, 0, 0, 1, 50, 123 )
scroll_base_scale = Vector2( 2, 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxForeground"]
position = Vector2( 0, 10 )
motion_offset = Vector2( 1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="CityForeground" type="Sprite" parent="ParallaxForeground/ParallaxLayer"]
texture = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 22
format = 1
tile_data = PoolIntArray( -720882, 0, 0, -720881, 0, 0, -458737, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -196594, 0, 0, -196572, 0, 0, -196560, 0, 0, -196559, 0, 0, -65513, 0, 0, 12, 0, 0, 13, 0, 0, 196616, 0, 0, 196617, 0, 0, 196629, 0, 0, 196630, 0, 0, 196645, 0, 0, 196646, 0, 0, 262217, 0, 0, 393219, 0, 0, 393223, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458813, 0, 0, 458817, 0, 0, 458825, 0, 0, 524288, 0, 0, 524289, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 720879, 4, 0, 720880, 4, 0, 720881, 4, 0, 720882, 4, 0, 720883, 4, 0, 720884, 4, 0, 720885, 4, 0, 720886, 4, 0, 720887, 4, 0, 720888, 4, 0, 720889, 4, 0, 720890, 4, 0, 720891, 4, 0, 720892, 4, 0, 720893, 4, 0, 720894, 4, 0, 720895, 4, 0, 655360, 4, 0, 655361, 4, 0, 655362, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655385, 4, 0, 655386, 4, 0, 655387, 4, 0, 655388, 4, 0, 655389, 4, 0, 655390, 4, 0, 655391, 4, 0, 655392, 4, 0, 655393, 4, 0, 655394, 4, 0, 655395, 4, 0, 655396, 4, 0, 655397, 4, 0, 655398, 4, 0, 655399, 4, 0, 655400, 4, 0, 655401, 4, 0, 655402, 4, 0, 655403, 4, 0, 655404, 4, 0, 655405, 4, 0, 655406, 4, 0, 655407, 4, 0, 655408, 4, 0, 655409, 4, 0, 655410, 4, 0, 655411, 4, 0, 655412, 4, 0, 655413, 4, 0, 655414, 4, 0, 655415, 4, 0, 655416, 4, 0, 655417, 4, 0, 655418, 4, 0, 655419, 4, 0, 655420, 4, 0, 655421, 4, 0, 655422, 4, 0, 655423, 4, 0, 655424, 4, 0, 655425, 4, 0, 655426, 4, 0, 655427, 4, 0, 655428, 4, 0, 655429, 4, 0, 655430, 4, 0, 655431, 4, 0, 655432, 4, 0, 655433, 4, 0, 655434, 4, 0, 655435, 4, 0, 655436, 4, 0, 655437, 4, 0, 655438, 4, 0, 655439, 4, 0, 655440, 4, 0, 655441, 4, 0, 655442, 4, 0, 655443, 4, 0, 655444, 4, 0, 655445, 4, 0, 655446, 4, 0, 655447, 4, 0, 655448, 4, 0, 655449, 4, 0, 655450, 4, 0, 655451, 4, 0, 655452, 4, 0, 655453, 4, 0, 655454, 4, 0, 655455, 4, 0, 655456, 4, 0, 786415, 4, 0, 786416, 4, 0, 786417, 4, 0, 786418, 4, 0, 786419, 4, 0, 786420, 4, 0, 786421, 4, 0, 786422, 4, 0, 786423, 4, 0, 786424, 4, 0, 786425, 4, 0, 786426, 4, 0, 786427, 4, 0, 786428, 4, 0, 786429, 4, 0, 786430, 4, 0, 786431, 4, 0, 720896, 4, 0, 720897, 4, 0, 720898, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720921, 4, 0, 720922, 4, 0, 720923, 4, 0, 720924, 4, 0, 720925, 4, 0, 720926, 4, 0, 720927, 4, 0, 720928, 4, 0, 720929, 4, 0, 720930, 4, 0, 720931, 4, 0, 720932, 4, 0, 720933, 4, 0, 720934, 4, 0, 720935, 4, 0, 720936, 4, 0, 720937, 4, 0, 720938, 4, 0, 720939, 4, 0, 720940, 4, 0, 720941, 4, 0, 720942, 4, 0, 720943, 4, 0, 720944, 4, 0, 720945, 4, 0, 720946, 4, 0, 720947, 4, 0, 720948, 4, 0, 720949, 4, 0, 720950, 4, 0, 720951, 4, 0, 720952, 4, 0, 720953, 4, 0, 720954, 4, 0, 720955, 4, 0, 720956, 4, 0, 720957, 4, 0, 720958, 4, 0, 720959, 4, 0, 720960, 4, 0, 720961, 4, 0, 720962, 4, 0, 720963, 4, 0, 720964, 4, 0, 720965, 4, 0, 720966, 4, 0, 720967, 4, 0, 720968, 4, 0, 720969, 4, 0, 720970, 4, 0, 720971, 4, 0, 720972, 4, 0, 720973, 4, 0, 720974, 4, 0, 720975, 4, 0, 720976, 4, 0, 720977, 4, 0, 720978, 4, 0, 720979, 4, 0, 720980, 4, 0, 720981, 4, 0, 720982, 4, 0, 720983, 4, 0, 720984, 4, 0, 720985, 4, 0, 720986, 4, 0, 720987, 4, 0, 720988, 4, 0, 720989, 4, 0, 720990, 4, 0, 720991, 4, 0, 720992, 4, 0, 851951, 4, 0, 851952, 4, 0, 851953, 4, 0, 851954, 4, 0, 851955, 4, 0, 851956, 4, 0, 851957, 4, 0, 851958, 4, 0, 851959, 4, 0, 851960, 4, 0, 851961, 4, 0, 851962, 4, 0, 851963, 4, 0, 851964, 4, 0, 851965, 4, 0, 851966, 4, 0, 851967, 4, 0, 786432, 4, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 4, 0, 786458, 4, 0, 786459, 4, 0, 786460, 4, 0, 786461, 4, 0, 786462, 4, 0, 786463, 4, 0, 786464, 4, 0, 786465, 4, 0, 786466, 4, 0, 786467, 4, 0, 786468, 4, 0, 786469, 4, 0, 786470, 4, 0, 786471, 4, 0, 786472, 4, 0, 786473, 4, 0, 786474, 4, 0, 786475, 4, 0, 786476, 4, 0, 786477, 4, 0, 786478, 4, 0, 786479, 4, 0, 786480, 4, 0, 786481, 4, 0, 786482, 4, 0, 786483, 4, 0, 786484, 4, 0, 786485, 4, 0, 786486, 4, 0, 786487, 4, 0, 786488, 4, 0, 786489, 4, 0, 786490, 4, 0, 786491, 4, 0, 786492, 4, 0, 786493, 4, 0, 786494, 4, 0, 786495, 4, 0, 786496, 4, 0, 786497, 4, 0, 786498, 4, 0, 786499, 4, 0, 786500, 4, 0, 786501, 4, 0, 786502, 4, 0, 786503, 4, 0, 786504, 4, 0, 786505, 4, 0, 786506, 4, 0, 786507, 4, 0, 786508, 4, 0, 786509, 4, 0, 786510, 4, 0, 786511, 4, 0, 786512, 4, 0, 786513, 4, 0, 786514, 4, 0, 786515, 4, 0, 786516, 4, 0, 786517, 4, 0, 786518, 4, 0, 786519, 4, 0, 786520, 4, 0, 786521, 4, 0, 786522, 4, 0, 786523, 4, 0, 786524, 4, 0, 786525, 4, 0, 786526, 4, 0, 786527, 4, 0, 786528, 4, 0 )

[node name="Player" parent="." instance=ExtResource( 18 )]
position = Vector2( -77, 140 )
jump_speed = -450
gravity = 1850
friction = 0.5

[node name="RemoteTransform2D" parent="Player" index="4"]
remote_path = NodePath("../../Camera2D")

[node name="PlayerHealth" parent="Player" index="8"]
drying_rate = 5.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -77, 140 )
offset = Vector2( 35, -25 )
current = true
process_mode = 0
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.1
drag_margin_top = 0.5
drag_margin_right = 0.0
drag_margin_bottom = 0.5

[node name="ForegroundTileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_mask = 22
format = 1
tile_data = PoolIntArray( 393220, 1, 0, 393221, 2, 0, 393222, 3, 0, 458814, 1, 0, 458815, 2, 0, 458816, 3, 0 )

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="Objects" type="Node2D" parent="."]

[node name="Puddle" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( 88, 104 )

[node name="Puddle2" parent="Objects" instance=ExtResource( 14 )]
position = Vector2( 1016, 120 )

[node name="Vine1" type="Sprite" parent="Objects"]
position = Vector2( -242.816, 75.6323 )
texture = ExtResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="Objects/Vine1"]
collision_mask = 22

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Objects/Vine1/StaticBody2D"]
position = Vector2( 2.81599, -59.6323 )
shape = SubResource( 1 )

[node name="Vine2" type="Sprite" parent="Objects"]
position = Vector2( -256, -48 )
rotation = 5.16268
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Vine3" type="Sprite" parent="Objects"]
position = Vector2( -224, 96 )
rotation = 0.340339
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Vine4" type="Sprite" parent="Objects"]
position = Vector2( -272, 160 )
rotation = 2.71748
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Vine5" type="Sprite" parent="Objects"]
position = Vector2( 1433.29, 89.4566 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="Objects/Vine5"]
collision_mask = 22

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Objects/Vine5/StaticBody2D"]
position = Vector2( 2.81599, -59.6323 )
shape = SubResource( 1 )

[node name="Vine6" type="Sprite" parent="Objects"]
position = Vector2( 1424, -32 )
rotation = 1.494
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Vine7" type="Sprite" parent="Objects"]
position = Vector2( 1452.11, 109.824 )
rotation = 0.340339
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Vine8" type="Sprite" parent="Objects"]
position = Vector2( 1404.11, 173.824 )
rotation = 2.71748
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Crystal" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 454.83, 23.7581 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal2" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 688.694, 46.0043 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal3" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 384, -160 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal4" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 144, -64 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal5" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 880, -80 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal6" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 1184, -16 )
scale = Vector2( 0.5, 0.5 )

[node name="Crystal7" parent="Objects" instance=ExtResource( 19 )]
position = Vector2( 688, -128 )
scale = Vector2( 0.5, 0.5 )

[node name="TeleportChecker" parent="." instance=ExtResource( 17 )]

[node name="MenuLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="MainMenu" parent="MenuLayer" instance=ExtResource( 12 )]

[node name="GameOverScreen" parent="MenuLayer" instance=ExtResource( 13 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="WinScreen" parent="MenuLayer" instance=ExtResource( 11 )]
visible = false
modulate = Color( 1, 1, 1, 0 )
next_level = "Level3"

[node name="EndScreen" parent="MenuLayer" instance=ExtResource( 15 )]
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="StoryScreen" parent="MenuLayer" instance=ExtResource( 16 )]

[connection signal="pause" from="." to="MenuLayer/MainMenu" method="_on_World_pause"]
[connection signal="unpause" from="." to="MenuLayer/MainMenu" method="_on_World_unpause"]
[connection signal="game_over" from="Player" to="." method="_on_Player_game_over"]
[connection signal="toggle_pause" from="MenuLayer/MainMenu" to="." method="_on_MainMenu_toggle_pause"]
[connection signal="pressed" from="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/Story" to="." method="_on_Story_pressed"]
[connection signal="pressed" from="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/ExitGame" to="MenuLayer/MainMenu" method="_on_ExitGame_pressed"]

[editable path="Player"]
[editable path="MenuLayer/MainMenu"]
[editable path="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/Continue"]
[editable path="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/NewGame"]
[editable path="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/Story"]
[editable path="MenuLayer/MainMenu/MarginContainer/VBoxContainer/CenterContainer/Buttons/ExitGame"]
